feat: window mode and background support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "PlayBridge"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 image = "*"
-screenshots = "*"
 spin_sleep = "*"
-windows = {version = "*", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]}
+windows = {version = "*", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_UI_WindowsAndMessaging"]}
